--- a/Mandel.bib
+++ b/Mandel.bib
@@ -25648,6 +25648,40 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{RomeroShaw:2021,
+       author = {{Romero-Shaw}, Isobel M. and {Lasky}, Paul D. and {Thrane}, Eric},
+        title = "{Signs of eccentricity in two gravitational-wave signals may indicate a sub-population of dynamically assembled binary black holes}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2021,
+        month = aug,
+          eid = {arXiv:2108.01284},
+        pages = {arXiv:2108.01284},
+archivePrefix = {arXiv},
+       eprint = {2108.01284},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021arXiv210801284R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Bustillo:2021,
+       author = {{Bustillo}, Juan Calder{\'o}n and {Sanchis-Gual}, Nicolas and {Torres-Forn{\'e}}, Alejandro and {Font}, Jos{\'e} A.},
+        title = "{Confusing Head-On Collisions with Precessing Intermediate-Mass Binary Black Hole Mergers}",
+      journal = {\prl},
+     keywords = {General Relativity and Quantum Cosmology},
+         year = 2021,
+        month = may,
+       volume = {126},
+       number = {20},
+          eid = {201101},
+        pages = {201101},
+          doi = {10.1103/PhysRevLett.126.201101},
+archivePrefix = {arXiv},
+       eprint = {2009.01066},
+ primaryClass = {gr-qc},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021PhRvL.126t1101B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
 @ARTICLE{Ihm:2006,
        author = {{Ihm}, Catherine Mia and {Kalogera}, Vassiliki and
