--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -162,7 +162,7 @@ The masses of the black-hole binaries observed to date are shown in figure \ref{
 \begin{figure}
 	\centering
 	\includegraphics[width=0.99\textwidth]{Graveyard.png}
-	\caption{The masses (in solar masses, vertical axis) of black holes observed as gravitational-wave sources and reported in the GWTC-2 catalog (blue), as well as masses of black holes in X-ray binaries (purple).  Galactic neutron stars observed as radio pulsars (yellow) and the merging double neutron stars GW170817 and GW190425 (orange) appear at the bottom of the figure.  Merger product masses are shown for gravitational-wave detections. Placement on the horizontal axis is arbitrary.  Error bars are indicative of the measurement uncertainty.  Figure courtesy of Frank Elavsky and Aaron Geller, Northwestern University and LIGO-Virgo collaborations.}\label{fig:BHmasses} 
+	\caption{The masses (in solar masses, vertical axis) of black holes observed as gravitational-wave sources and reported in the GWTC-2 catalog (blue), as well as masses of black holes in X-ray binaries (purple).  Galactic neutron stars observed as radio pulsars (yellow) and the merging double neutron stars GW170817 and GW190425 (orange) appear at the bottom of the figure.  Merger product masses are shown for gravitational-wave detections. Placement on the horizontal axis is arbitrary.  Error bars are indicative of the measurement uncertainty.  Figure courtesy of Aaron Geller, Northwestern University and LIGO-Virgo collaborations.}\label{fig:BHmasses} 
 \end{figure}
 
 \textbf{Masses:} The individual black-hole masses span a range from $\simeq 2.6 M_\odot$ (assuming the lower-mass object in GW190814 is a black hole rather than a neutron star) to $\simeq 80 M_\odot$ for GW190521 (or more, see \cite{FishbachHolz:2020,NitzCapano:2021}).  There is a significant selection bias  toward detecting more massive systems, because sensitivity to gravitational waves from binary mergers depends on the system mass.  The gravitational-wave amplitude, and hence the maximum (horizon) distance at which a source is detectable, scales as $M_c^{5/6}$ for inspiral-dominated signals. The surveyed volume therefore scales as $M_c^{2.5}$.  Once selection effects are accounted for, the mass distribution for the more massive black hole appears to be consistent with a power-law $p(M) \propto M^{-2.6}$, reminiscent of the stellar initial mass function \citep{Salpeter:1955}, with an additional peak at around $33 M_\odot$.  The vast majority of merging binary black holes, $\approx 97\%$, have both companion masses below $45 M_\odot$ \citep{GWTC2:pop}.   
@@ -171,19 +171,17 @@ The vast majority of observed merging binary black holes are consistent with hav
 
 \textbf{Black-Hole Spins:} Individual black-hole spins are difficult to measure precisely with gravitational waves.  Most observed mergers are consistent with negligible spins, but some events show evidence of non-zero `effective spin' $\chi_\textrm{eff}$ --- the mass-weighted dimensionless spin along the direction of the orbital angular momentum.  The spin distribution is a topic of active ongoing discussion \citep[e.g.,][]{GWTC2:pop,Roulet:2021,Callister:2021,Galaudage:2021}.  In particular, \citet{Galaudage:2021} conclude that $\sim 80\%$ of merging binary black holes have negligible spins on both components (consistent with zero), while the remaining 20\% have positive and preferentially aligned spins, with no observed events displaying a definite negative $\chi_\textrm{eff}$.  The degree of precession due to spin-orbit misalignment is also unclear; there may be some evidence for it in individual events, such as GW190521 \citep{GW190521}, though other explanations for its signal morphology (e.g., eccentricity, see below) have been proposed.
 
-\textbf{Distances and Sky Locations:} All of the observed \ilya{binary black hole} signals came from distances of around 500 Mpc to 1 Gpc (redshifts $z\sim 0.1$ -- $0.2$), \ilya{consistent with the detector sensitivity during the first two observing runs of advanced LIGO}.  With just two operational detectors, LIGO Hanford and LIGO Livingston, for all events prior to GW170814, sources could only be localized to 90\% credible regions spanning hundreds to more than a thousand square degrees on the sky.  The participation of the Virgo instrument in the observation of GW170814 reduced the sky region to only 60 deg$^2$ \citep{GW170814}.  Nonetheless, associations with specific host galaxies are impossible for all observed binary black hole mergers.  
+\textbf{Distances and Sky Locations:} All of the observed binary black hole signals came from median redshifts between $z\sim 0.05$ and $z \sim 0.7$ (distances of around 250 Mpc to 5 Gpc), consistent with the detector sensitivity during the first three observing runs of advanced LIGO.  With just two operational detectors, LIGO Hanford and LIGO Livingston, for all events prior to GW170814, sources could only be localized to 90\% credible regions spanning hundreds to more than a thousand square degrees on the sky.  The participation of the Virgo instrument in the observation of GW170814 reduced the sky region to only 60 deg$^2$ \citep{GW170814}.   The best-localised binary black hole mergers have 90\% credible sky localisations of only $\approx 20$ deg$^2$ \citep{GWTC2}.  Nonetheless, associations with specific host galaxies are impossible for all observed binary black hole mergers.  
 
-\textbf{Eccentricity:}
+\textbf{Eccentricity:}  GW190521 appears to have residual eccentricity of at least 0.1 at the gravitational-wave frequency of 10 Hz \citep{RomeroShaw:2020GW190521}.  One or more other binary black hole mergers may also signs of non-negligible eccentricity \citep{RomeroShaw:2021}.  However, there is a possible degeneracy between eccentricity and precession \citep{Bustillo:2021}, and analyses generally do not include both effects, so eccentricity observations do not appear conclusive at this time.
 
-\cite{RomeroShaw:2020GW190521}
-
-\textbf{Testing General Relativity:} All gravitational-wave signals observed to date are consistent with gravitational waves expected within the general theory of relativity, providing a stringent test of this theory in the dynamical, strong-field regime \citep{GW150914:GR,GW170104}.
+\textbf{Testing General Relativity:} All gravitational-wave signals observed to date are consistent with gravitational waves expected within the general theory of relativity, providing a stringent test of this theory in the dynamical, strong-field regime \citep{GW150914:GR,GWTC2:GR}.
 
 \textbf{Merger Rate:} The uncertainty in the binary black hole mass distribution is relayed into the uncertainty on the inferred merger rate: $23.9^{+14.3}_{-8.6}$ Gpc$^{-3}$ yr$^{-1}$.  There is tentative evidence that the merger rate increases with redshift \citep{GWTC2:pop}.  
 
 \subsection{Electromagnetic observations}
 
-While recent gravitational-wave observations have invigorated the field of massive binary evolution, there already exists a wealth of electromagnetic observations of systems at various stages along the possible paths to binary black hole formation. In this section we describe some of the key electromagnetic observations that shed light on compact object binary formation and evolution preceding \ilya{the} merger.
+While recent gravitational-wave observations have invigorated the field of massive binary evolution, there already exists a wealth of electromagnetic observations of systems at various stages along the possible paths to binary black hole formation. In this section we describe some of the key electromagnetic observations that shed light on compact object binary formation and evolution preceding the merger.
 
 A wide variety of electromagnetic observations inform our understanding of the evolution of massive stellar binaries. These include observations of: 
 \begin{itemize}
