--- a/Mandel.bib
+++ b/Mandel.bib
@@ -25297,23 +25297,23 @@ archivePrefix = {arXiv},
 }
 
 @ARTICLE{Shenar:2020,
-       author = {{Shenar}, T. and {Bodensteiner}, J. and {Abdul-Masih}, M. and
-         {Fabry}, M. and {Mahy}, L. and {Marchant}, P. and {Banyard}, G. and
-         {Bowman}, D.~M. and {Dsilva}, K. and {Hawcroft}, C. and {Reggiani}, M. and
-         {Sana}, H.},
-        title = "{The hidden companion in LB-1 unveiled by spectral disentangling}",
-      journal = {arXiv e-prints},
-     keywords = {Astrophysics - Solar and Stellar Astrophysics},
+       author = {{Shenar}, T. and {Bodensteiner}, J. and {Abdul-Masih}, M. and {Fabry}, M. and {Mahy}, L. and {Marchant}, P. and {Banyard}, G. and {Bowman}, D.~M. and {Dsilva}, K. and {Hawcroft}, C. and {Reggiani}, M. and {Sana}, H.},
+        title = "{The ``hidden'' companion in LB-1 unveiled by spectral disentangling}",
+      journal = {\aap},
+     keywords = {stars: early-type, stars: emission-line, Be, binaries: spectroscopic, binaries: close, stars: individual: LS V+22 25, Astrophysics - Solar and Stellar Astrophysics},
          year = 2020,
-        month = apr,
-          eid = {arXiv:2004.12882},
-        pages = {arXiv:2004.12882},
+        month = jul,
+       volume = {639},
+          eid = {L6},
+        pages = {L6},
+          doi = {10.1051/0004-6361/202038275},
 archivePrefix = {arXiv},
        eprint = {2004.12882},
  primaryClass = {astro-ph.SR},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2020arXiv200412882S},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020A&A...639L...6S},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
 
 @ARTICLE{Sell:2015,
        author = {{Sell}, P.~H. and {Heinz}, S. and {Richards}, E. and {Maccarone}, T.~J. and
@@ -30854,3 +30854,73 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2021A&A...651A..96A},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{AbdulMassih:2020,
+       author = {{Abdul-Masih}, Michael and {Banyard}, Gareth and {Bodensteiner}, Julia and {Bordier}, Emma and {Bowman}, Dominic{\^A} M. and {Dsilva}, Karan and {Fabry}, Matthias and {Hawcroft}, Calum and {Mahy}, Laurent and {Marchant}, Pablo and {Raskin}, Gert and {Reggiani}, Maddalena and {Shenar}, Tomer and {Tkachenko}, Andrew and {Van Winckel}, Hans and {Vermeylen}, Lore and {Sana}, Hugues},
+        title = "{On the signature of a 70-solar-mass black hole in LB-1}",
+      journal = {\nat},
+     keywords = {Astrophysics - Solar and Stellar Astrophysics},
+         year = 2020,
+        month = apr,
+       volume = {580},
+       number = {7805},
+        pages = {E11-E15},
+          doi = {10.1038/s41586-020-2216-x},
+archivePrefix = {arXiv},
+       eprint = {1912.04092},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020Natur.580E..11A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Bavera:2021,
+       author = {{Bavera}, Simone S. and {Fragos}, Tassos and {Zapartas}, Emmanouil and {Ramirez-Ruiz}, Enrico and {Marchant}, Pablo and {Kelley}, Luke Z. and {Zevin}, Michael and {Andrews}, Jeff J. and {Coughlin}, Scott and {Dotter}, Aaron and {Kovlakas}, Konstantinos and {Misra}, Devina and {Serra-Perez}, Juan G. and {Qin}, Ying and {Rocha}, Kyle A. and {Rom{\'a}n-Garza}, Jaime and {Tran}, Nam H. and {Xing}, Zepei},
+        title = "{Probing the progenitors of spinning binary black-hole mergers with long gamma-ray bursts}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Cosmology and Nongalactic Astrophysics, General Relativity and Quantum Cosmology},
+         year = 2021,
+        month = jun,
+          eid = {arXiv:2106.15841},
+        pages = {arXiv:2106.15841},
+archivePrefix = {arXiv},
+       eprint = {2106.15841},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021arXiv210615841B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Jayasinghe:2021,
+       author = {{Jayasinghe}, T. and {Stanek}, K.~Z. and {Thompson}, Todd A. and {Kochanek}, C.~S. and {Rowan}, D.~M. and {Vallely}, P.~J. and {Strassmeier}, K.~G. and {Weber}, M. and {Hinkle}, J.~T. and {Hambsch}, F. -J. and {Martin}, D.~V. and {Prieto}, J.~L. and {Pessi}, T. and {Huber}, D. and {Auchettl}, K. and {Lopez}, L.~A. and {Ilyin}, I. and {Badenes}, C. and {Howard}, A.~W. and {Isaacson}, H. and {Murphy}, S.~J.},
+        title = "{A unicorn in monoceros: the 3 M$_{{\ensuremath{\odot}}}$ dark companion to the bright, nearby red giant V723 Mon is a non-interacting, mass-gap black hole candidate}",
+      journal = {\mnras},
+     keywords = {binaries: spectroscopic, stars: black holes, stars: individual: V723 Mon, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - High Energy Astrophysical Phenomena, General Relativity and Quantum Cosmology},
+         year = 2021,
+        month = jun,
+       volume = {504},
+       number = {2},
+        pages = {2577-2602},
+          doi = {10.1093/mnras/stab907},
+archivePrefix = {arXiv},
+       eprint = {2101.02212},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021MNRAS.504.2577J},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Chawla:2021,
+       author = {{Chawla}, Chirag and {Chatterjee}, Sourav and {Breivik}, Katelyn and {Krishna Moorthy}, Chaithanya and {Andrews}, Jeff J. and {Sanderson}, Robyn E.},
+        title = "{Gaia May Detect Hundreds of Well-characterised Stellar Black Holes}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Astrophysics of Galaxies, Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2021,
+        month = oct,
+          eid = {arXiv:2110.05979},
+        pages = {arXiv:2110.05979},
+archivePrefix = {arXiv},
+       eprint = {2110.05979},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021arXiv211005979C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
