--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -186,28 +186,35 @@ While recent gravitational-wave observations have invigorated the field of massi
 A wide variety of electromagnetic observations inform our understanding of the evolution of massive stellar binaries. These include observations of: 
 \begin{itemize}
 \item the initial mass and period distributions of binary stars at formation \citep[e.g.,][]{Sana:2012,MoeDiStefano:2017}; 
-\item luminous red novae, which may be associated with common envelope events \citep[e.g.,][]{Ivanova:2013LRN};
+\item luminous red novae, which may be associated with common envelope events \citep[e.g.,][]{Ivanova:2013LRN,Howitt:2020};
 \item Galactic binary radio pulsars \citep[e.g.,][]{Tauris:2017};
 \item short gamma-ray bursts \citep[e.g.,][]{Berger:2014};
-\item supernovae and long gamma-ray bursts \citep[e.g.,][]{Cantiello:2007,Szecsi:2017};
+\item supernovae and long gamma-ray bursts \citep[e.g.,][]{Cantiello:2007,Szecsi:2017,Bavera:2021};
 \item X-ray binaries \citep[e.g.,][]{TaurisvdH:2006}.
 \end{itemize}
-Here we focus on X-ray binaries, the type of binary system with the closest connection to merging binary black holes, although only a small minority of black-hole X-ray binaries will ultimately evolve into merging black holes \citep[e.g.,][]{CygnusX3:2012}. Black\ilya{-}hole X-ray binaries consist of a star transferring mass onto a black\ilya{-}hole companion, leading to the emission of X-ray radiation from the accretion disk surrounding the black hole. 
+We first focus on X-ray binaries, the type of binary system with the closest connection to merging binary black holes, although only a small minority of black-hole X-ray binaries will ultimately evolve into merging black holes \citep[e.g.,][]{CygnusX3:2012,Neijssel:2020CygX1}. Black-hole X-ray binaries consist of a star transferring mass onto a black-hole companion, leading to the emission of X-ray radiation from the accretion disk surrounding the black hole.  We then discuss detached black-hole binaries, black-hole microlensing observations, and selection effects.
 
 \subsubsection{X-ray binaries}
 
 X-ray binaries containing accreting black holes can be divided into two categories, low-mass and high-mass, in reference to the mass of the black hole's companion star. The accretion process differs between the two types: in low-mass X-ray binaries, the tidal field of the black hole is causing mass to stream from the companion on to the black hole in the process known as Roche-lobe overflow, while in high-mass X-ray binaries, the black hole accretes only a fraction of the material (stellar wind) driven off the companion's surface.
 
-\textbf{Black\ilya{-}Hole Masses:} 
-Black-hole X-ray binaries with dynamical mass measurements provide the only secure measurements of black\ilya{-}hole masses other than the gravitational-wave observations described above.  \citet{Ozel:2010} and \citet{Farr:2011} summarize the mass distribution of black-hole X-ray binaries; they find a distribution which ranges from 4 or 5 solar masses for the lightest low-mass X-ray binaries (with a possible mass gap between neutron\ilya{-}star and black\ilya{-}hole masses) to \ilya{$\gtrsim 20\, M_\odot$} for the heaviest high-mass X-ray binaries.  However, given the doubts subsequently placed on the radial velocity measurements in high-mass X-ray binaries such as IC10 X-1 \citep{Laycock:2015}, there are no known black holes with dynamically confirmed masses certain to exceed \ilya{$\simeq 15\, M_\odot$}.  The measured masses of black holes in X-ray binaries are sketched in figure \ref{fig:BHmasses}, along with the masses of the observed gravitational-wave sources.  This figure does not include the speculative but potentially very exciting evidence for intermediate-mass black holes \citep{MillerColbert:2004,Pasham:2014}; if such few-hundred solar-mass black holes generically exist in globular clusters, they will \ilya{substitute into merging binaries and ultimately be observable} as gravitational-wave sources \citep[e.g.,][]{Mandel:2008,IMBBH:O1}.
+\textbf{Black-Hole Masses:} 
+Until recently, black-hole X-ray binaries with dynamical mass measurements provided the only secure measurements of black-hole masses other than the gravitational-wave observations described above, though this is now changing thanks to observations of detached binaries and microlensing data (see section \ref{sec:lensing}).  \citet{Ozel:2010} and \citet{Farr:2011} summarize the mass distribution of black-hole X-ray binaries.  They find a distribution which ranges from $> 20\, M_\odot$ for the heaviest high-mass X-ray binaries to 4 or 5 solar masses for the lightest low-mass X-ray binaries, with a possible mass gap between neutron-star and black-hole masses, though see \citealt{Kreidberg:2012} for possible biases in mass measurements of some low-mass X-ray binaries and section \ref{sec:lensing} for evolutionary selection effects.  The uncertainty regarding the radial velocity measurements in high-mass X-ray binaries such as IC10 X-1 \citep{Laycock:2015} mean that the most massive confirmed stellar-mass black hole is Cygnus X-1, with a dynamical mass measurement of $21 \pm 2\, M_\odot$ \citep{MillerJones:2021}.   The measured masses of black holes in X-ray binaries are sketched in figure \ref{fig:BHmasses}, along with the masses of the observed gravitational-wave sources.  This figure does not include the speculative but potentially very exciting evidence for intermediate-mass black holes \citep{MillerColbert:2004,Greene:2019,Paynter:2021}; if few-hundred solar-mass black holes generically exist in globular clusters, they will substitute into merging binaries and ultimately be observable as gravitational-wave sources \citep[e.g.,][]{Mandel:2008,IMBBH:O1}.
 
+\textbf{Black-Hole Spin Magnitudes:} Black-hole X-ray binaries also provide an opportunity for measuring black-hole spins \citep[see][for a recent review]{MillerMiller:2015}.  Continuum fitting of the X-ray flux from the accretion disk and iron K-$\alpha$ line fits to the disk reflection profile can both be used to infer the location of the inner edge of the disk, which is assumed to correspond to the radius of the innermost stable circular orbit, a sensitive function of black-hole spin.  Quasi-periodic oscillations also have the potential to provide spin measurements.  Unfortunately, the underlying physical mechanisms are not fully understood at present, and the inferred spins may suffer from significant systematics \citep[e.g.,][]{Kawano:2017}.  For example, out of six systems for which both disk continuum and disk reflection spin measurements are available, the two methods are inconsistent at the $3$ or $5$ sigma level for two systems, and for one system the statistical uncertainty is so large as to span nearly the full allowed range from $0$ to $1$ \cite{MillerMiller:2015}.  However, for the remaining three systems with both measurements available, both methods yield spins $\chi \gtrsim 0.9$.  
 
-\textbf{Black\ilya{-}Hole Spin Magnitudes:} Black\ilya{-}hole X-ray binaries also provide an opportunity for measuring 
-	black\ilya{-}hole spins \citep[see][for a recent review]{MillerMiller:2015}.  Continuum fitting of the X-ray flux from the accretion disk and iron K-$\alpha$ line fits to the disk reflection profile can both be used to infer the location of the inner edge of the disk, which is assumed to correspond to the radius of the innermost stable circular orbit, a sensitive function of black\ilya{-}hole spin.  Quasi-periodic oscillations also have the potential to provide spin measurements.  Unfortunately, the underlying physical mechanisms are not fully understood at present, and the inferred spins may suffer from significant systematics.  For example, out of six systems for which both disk continuum and disk reflection spin measurements are available, the two methods are inconsistent at the $3$ or $5$ sigma level for two systems, and for one system the statistical uncertainty is so large as to span nearly the full allowed range from $0$ to $1$ \ilya{\cite{MillerMiller:2015}}.  However, for the remaining three systems with both measurements available, both methods yield spins $\chi \gtrsim 0.9$.  
+\textbf{Black-Hole Spin Directions:} We know even less about the spin directions than the spin magnitudes.  Although black-hole spin-orbit alignment is assumed in continuum flux measurements \citep{MillerMiller:2015}, some black-hole X-ray binaries, including GRO J1655-40 \citep{Martin:2008}, 4U 1543-47 \citep{MorningstarMiller:2014} and particularly V4641 Sgr \citep{Orosz:2001,Martin:2008b} appear to indicate that the microquasar jet, presumably aligned with the BH spin axis, is misaligned with the orbit.  Moreover, initial stellar spins in binaries have been observed to be misaligned \citep[e.g.,][]{Albrecht:2009,Albrecht:2014}, though there are opportunities for subsequent realignment during binary evolution, as described below.
 
-\textbf{Inconsistency with Spin Observations from Gravitational-wave Sources?} These \ilya{three} high-spin observations include two high-mass X-ray binaries: LMC X-1 and Cygnus X-1.  This is significant, because unlike long-lived low-mass X-ray binaries, whose spin magnitudes could be altered by accretion from the companion, especially if they started out with intermediate-mass companions \citep{Podsiadlowski:2003,Fragos:2015}, high-mass X-ray binaries are too short-lived to enable significant spin changes due to accretion \citep{KingKolb:1999}.  Isolated binaries that form binary black holes are expected to go through the high-mass X-ray binary phase during their evolution.  Thus, if the high spin magnitude measurements in black-hole X-ray binaries are to be believed, then either some future merging binary black holes should be observed to have high spins like those in X-ray binaries, or, perhaps more likely, the observed high-mass X-ray binaries and merging binary black holes sample different evolutionary histories (see \autoref{BHspins}).
+\textbf{Inconsistency with Spin Observations from Gravitational-wave Sources?} These three rapidly spinning black holes include two high-mass X-ray binaries: LMC X-1 and Cygnus X-1.  This is significant, because unlike long-lived low-mass X-ray binaries, whose spin magnitudes could be altered by accretion from the companion, especially if they started out with intermediate-mass companions \citep{Podsiadlowski:2003,Fragos:2015}, high-mass X-ray binaries are too short-lived to enable significant spin changes due to accretion \citep{KingKolb:1999}.  Isolated binaries that form binary black holes are expected to go through the high-mass X-ray binary phase during their evolution.  Thus, if the high spin magnitude measurements in black-hole X-ray binaries are to be believed, then the observed high-mass X-ray binaries and merging binary black holes should predominantly sample different evolutionary histories (see section \ref{BHspins}).
 
-\textbf{Black\ilya{-}Hole Spin Directions:} We know even less about the spin directions than the spin magnitudes.  Although black-hole spin-orbit alignment is assumed in continuum flux measurements \citep{MillerMiller:2015}, some black-hole X-ray binaries, including GRO J1655-40 \citep{Martin:2008}, 4U 1543-47 \citep{MorningstarMiller:2014} and particularly V4641 Sgr \citep{Orosz:2001,Martin:2008b} appear to indicate that the microquasar jet, presumably aligned with the BH spin axis, is misaligned with the orbit.  Moreover, initial stellar spins in binaries have been observed to be misaligned \citep[e.g.,][]{Albrecht:2009,Albrecht:2014}, though there are opportunities for realignment during binary evolution, as described below.
+\subsubsection{Other electromagnetic black hole mass measurements} \label{sec:lensing}
+
+Until recently, only X-ray binaries allowed accurate mass measurements of stellar-mass black holes.  However, this has recently changed with observations of wide binaries with a luminous companion detached from a non-accreting black hole.  Examples of such observations include two $\sim 3\, M_\odot$ black holes in detached binaries \citep{Thompson:2019,Jayasinghe:2021} along with several black holes with lower limit mass measurements in detached binaries observed in a globular cluster \citep{Giesers:2019}.  Surveys like Gaia may detect hundreds of detached black hole binaries \citep[e.g.,][]{Chawla:2021}.  However, the case of LB-1, which was initially thought to contain an extremely massive black hole in a wide binary, highlights some of the challenges of accurately measuring black hole masses in detached systems \citep{Liu:2019,Eldridge:2020,AbdulMassih:2020,Shenar:2020}.   
+
+Microlensing observations provide a tool for measuring the masses of single black holes.  When such black holes pass between a luminous star and the observer, they temporarily lens the star, increasing its luminosity while the alignment is roughly within the Einstein ring.  Mircolensing measurements, together with gravitational-wave and detached black-hole binary observations, suggest that there is no evidence for a mass gap between neutron stars and black holes \citep{WyrzykowskiMandel:2019, Mroz:2021}.  However, there is a possible degeneracy between lower lens masses and higher lens-source relative velocities, since both reduce the transient duration; thus, the low-mass microlensing black-hole candidates could be consistent with higher-mass black holes receiving natal kicks of $\gtrsim 80$ km s$^{-1}$.
+
+Finally, it is worth remembering that all observations are likely to suffer from a range of selection effects.  These could be Malmquist biases which favour observations of the brightest or loudest sources, such as the enhanced detectability of more massive binaries in gravitational-wave data or of more rapidly accreting X-ray binaries (though see \citet{HiraiMandel:2021}, who point out that more complex detectability thresholds related to wind morphology may be relevant for high-mass X-ray binaries).  Alternatively, they could be evolutionary selection effects which can skew the observed populations; for example, X-ray binaries may contain few low-mass black holes, creating an impression of a mass gap between neutron star and black hole masses, if low-mass black holes get larger natal kicks that tend to disrupt binaries \citep{Mandel:2020}.
+
 
 \section{Formation scenarios}\label{form}
 
